[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "zeo_amd"
version = "0.1.0"
description = "tools to calculate the average minimum distance between zeolite structures"
authors = [{name = "Daniel Schwalbe-Koda", email = "dskoda@llnl.gov"}]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "average-minimum-distance >= 1.3.6",
    "scikit-learn >= 1.2.0",
    "ase",
    "jupyter",
    "matplotlib",
    "networkx",
    "pandas",
    "numpy",
    "tqdm",
    "shap",
    "umap-learn",
    "xgboost >= 1.7.0",
]

[project.scripts]
zamd_compare = "zeo_amd.scripts.compare:main"
zamd_hyperopt = "zeo_amd.scripts.hyperopt:main"

[project.urls]
Homepage = "https://github.com/dskoda/Zeolite-AMD"

[tool.setuptools]
packages = ["zeo_amd"]
